--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
     "description":"Provides a Discord Rich Presence while using Brackets.",
     "homepage":"https://github.com/benfoster04/brackets-drpc",
     "version":"1.0.0",
-    "author":"Ben Foster <fosterben150@gmail.com> (http://benfoster.ml)",
+    "author":"Ben Foster <fosterben150@gmail.com> (https://github.com/benfoster04/brackets-drpc)",
     "license":"MIT",
     "engines":{
         "brackets":">=1.8.0"
+    },
+    "repository":{
+        "type":"git",
+        "url":"https://github.com/benfoster04/brackets-drpc.git",
+        "branch":"master",
+        "SHA":""
     }
 }
