--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "version":"1.0.0",
     "author":"Ben Foster <fosterben150@gmail.com> (https://github.com/benfoster04/brackets-drpc)",
     "license":"MIT",
+    "keywords":["Discord","DRPC","RPC","Rich","Presence"],
     "engines":{
         "brackets":">=1.8.0"
     },
+    "dependencies":{"discord-rich-presence":"0.0.8"},
     "repository":{
         "type":"git",
         "url":"https://github.com/benfoster04/brackets-drpc.git",
-        "branch":"master",
-        "SHA":""
     }
 }
