--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
-    "name":"brackets-drpc",
-    "title":"Discord RPC",
-    "description":"Provides a Discord Rich Presence while using Brackets.",
-    "homepage":"https://github.com/benfoster04/brackets-drpc",
-    "version":"1.0.11",
-    "author":"Ben Foster <fosterben150@gmail.com> (https://github.com/benfoster04/brackets-drpc)",
-    "license":"MIT",
-    "keywords":["Discord","DRPC","RPC","Rich","Presence"],
-    "engines":{"brackets":">=1.8.0"},
-    "dependencies":{"discord-rpc":"3.1.2"},
-    "repository":{
-        "type":"git",
-        "url":"https://github.com/benfoster04/brackets-drpc.git"
+    "name": "brackets-drpc",
+    "title": "Discord RPC",
+    "description": "Provides a Discord Rich Presence while using Brackets.",
+    "homepage": "https://github.com/benfoster04/brackets-drpc",
+    "version": "1.0.11",
+    "author": "Ben Foster <fosterben150@gmail.com> (https://github.com/benfoster04/brackets-drpc)",
+    "license": "MIT",
+    "keywords": [
+        "Discord",
+        "DRPC",
+        "RPC",
+        "Rich",
+        "Presence"
+    ],
+    "engines": {
+        "brackets": ">=1.8.0"
+    },
+    "dependencies": {
+        "discord-rpc": "^3.1.4",
+        "register-scheme": "github:devsnek/node-register-scheme"
+    },
+    "devDependencies": {
+        "@types/discord-rpc": "^3.0.4"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/benfoster04/brackets-drpc.git"
     },
     "i18n": [
         "en",
